# kurs_project_11_course_new

./: .env.example  .flake8  .gitignore  DEMO.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  add_price_to_lessons.py  check_stripe.py  check_validators.py  check_validators_fixed.py  correct_test.py  create_session.py  docker-compose.yaml  docker-compose.yml  final_check.py  final_test.py  manual_test.py  open_stripe.py  pyproject.toml  quick-test.ps1  requirements.txt  schema.yml  stripe_test.html  test-payment.ps1  test-project.ps1  test_celery_setup.py  test_project.py
.github/workflows/: deploy.yml
config/: celery.py  middleware.py  settings.py  settings_fixed.py  settings_test.py  urls.py
courses/: cleanup_project.py  models.py  models_backup.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py  views_backup.py  views_payments.py
courses/fixtures/: courses.json  lessons.json
courses/migrations/: 0001_initial.py  0002_initial.py  0005_alter_lesson_video_url.py  0006_alter_lesson_video_url.py  0007_course_price.py
courses/services/: __init__.py  stripe_service.py
db/: init.sql
nginx/: nginx.conf
users/: api_views.py  final_fix.py  models.py  serializers.py  simple_payments.py  tasks.py  urls.py  views.py  views.py.backup
users/management/commands/: wait_for_db.py
users/migrations/: 0001_initial.py  0002_alter_payment_options_remove_payment_payment_date_and_more.py  0003_payment.py
users/templates/payments/: already_processed.html  base.html  cancel.html  error.html  success.html  waiting.html
